--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
+url: http://gkazior.github.com
 title: My Octopress Blog
-subtitle: A blogging framework for hackers.
+subtitle: A test
 author: Your Name
 simple_search: http://google.com/search
 description:
