--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://gkazior.github.com
+url: http://gkazior.github.com/blog
 title: My Octopress Blog
 subtitle: A test
 author: Your Name
