--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://gkazior.github.com/blog
+url: http://gkazior.github.com/blog/
 title: My Octopress Blog
 subtitle: A test
 author: Your Name
@@ -26,7 +26,7 @@ email:
 # ----------------------- #
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
-root: /
+root: /blog/
 permalink: /blog/:year/:month/:day/:title/
 source: source
 destination: public
